pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl13.mof
/* No Scopes defined. Per ABNF at least one keyword MUST exist */
Qualifier Abstract : boolean = false, 
    Scope(), 
    Flavor(EnableOverride, Restricted);
